Turning docker compose file's string image to lowercase.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
 
   gui:
     #build: .
-    image: hudsonventura/DockerWithGui:latest
-    #image: hudsonventura/DockerWithGui:latestWithWine
+    image: hudsonventura/dockerwithgui:latest
+    #image: hudsonventura/dockerwithgui:latest_withwine
     restart: always
     ports:
       # port for connect via VNC app
